<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:auto="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <com.woodys.widgets.GridCenterLayout
            android:id="@+id/gl_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="@color/red"
            auto:gl_itemHeight="auto_height"
            android:layout_marginLeft="20dp" />


        <com.woodys.demos.widgets.SeekLayout
            android:id="@+id/sl_raw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            auto:sl_info="@string/fixRaw"
            auto:sl_max="8" />

        <com.woodys.demos.widgets.SeekLayout
            android:id="@+id/sl_width"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            auto:sl_info="@string/width"
            auto:sl_max="200" />

        <com.woodys.demos.widgets.SeekLayout
            android:id="@+id/sl_height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            auto:sl_info="@string/height"
            auto:sl_max="200" />

        <com.woodys.demos.widgets.SeekLayout
            android:id="@+id/sl_horizontal_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            auto:sl_info="@string/horizontal_padding" />

        <com.woodys.demos.widgets.SeekLayout
            android:id="@+id/sl_vertical_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            auto:sl_info="@string/vertical_padding" />

        <com.woodys.demos.widgets.RadioLayout
            android:id="@+id/rl_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal"
            auto:rl_items="@array/width_type" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:text="@string/add" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_last"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remove" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>